<resources>
    <string name="app_name">FirebaseVerticalPrototype</string>
    <string name="passwordHintText">Password</string>
    <string name="emailHintText">Email</string>
    <string name="signUpButtonLabel">Sign Up</string>
    <string name="loginButtonLabel">Login</string>
    <string name="signUpTextLabel">Sign Up!</string>
    <string name="logout">Logout</string>
    <string name="welcomeText">Welcome to <b>Straightline</b>, the app for skiers and snowboarders on the mountain. If you have an account with us already please sign in otherwise hit the <b>Sign Up</b> link below.</string>
    <string name="signUpText">Sign up here to start your <b>Straightline</b> experience!</string>
    <string-array name="mountains">
        <item>Bear Valley, CA</item>
        <item>Boreal Mountain Resort, CA</item>
        <item>Donner Ski Ranch, CA</item>
        <item>Heavenly Mountain Resort, CA</item>
        <item>Homewood Mountain Resort, CA</item>
        <item>June Mountain, CA</item>
        <item>Kirkwood, CA</item>
        <item>Mammoth Mountain Ski Area, CA</item>
        <item>Mountain High, CA</item>
        <item>Mt. Baldy, CA</item>
        <item>Northstar, CA</item>
        <item>Sierra-at-Tahoe, CA</item>
        <item>China Peak, CA</item>
        <item>Soda Springs, CA</item>
        <item>Squaw Valley/Alpine Meadows, CA</item>
        <item>Sugar Bowl Resort, CA</item>
        <item>Tahoe Donner, CA</item>
    </string-array>
</resources>
