<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginScreenActivity"
    android:gravity="center_vertical">

    <TextView android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/welcomeText"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/abc_dialog_padding_material" />

    <EditText android:id="@+id/emailEditTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHintText"
        android:gravity="center_vertical"
        android:layout_below="@+id/welcomeTextView"
        android:layout_marginBottom="20dp">
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/passwordEditTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHintText"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:layout_below="@+id/emailEditTextField"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditTextField"
        android:text="@string/loginButtonLabel"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:text="@string/signUpTextLabel" />

</RelativeLayout>