<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical"
    tools:context=".SignUpScreenActivity" >

    <TextView android:id="@+id/signUpTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/signUpText"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/abc_dialog_padding_material"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHintText"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/signUpTextLabel">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailField"
        android:inputType="textPassword"
        android:hint="@string/passwordHintText"
        android:layout_marginBottom="20dp"/>

    <EditText android:id="@+id/confirmPassField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passField"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassField"
        android:text="@string/signUpButtonLabel" />

</RelativeLayout>
